NULL =

icondir = $(datadir)/icons/hicolor/24x24/apps
icon_DATA = 				\
	goa-account.png			\
	goa-account-facebook.png	\
	goa-account-google.png		\
	goa-account-owncloud.png	\
	goa-account-pocket.png		\
	goa-account-twitter.png		\
	goa-account-flickr.png		\
	goa-account-yahoo.png		\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~

-include $(top_srcdir)/git.mk
