NULL =

icondir = $(datadir)/icons/hicolor/32x32/apps
icon_DATA = 				\
	goa-account.png			\
	goa-account-facebook.png	\
	goa-account-flickr.png		\
	goa-account-google.png		\
	goa-account-msn.png		\
	goa-account-owncloud.png	\
	goa-account-nextcloud.png	\
	goa-account-pocket.png		\
	goa-account-foursquare.png	\
	goa-account-todoist.png	\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~

-include $(top_srcdir)/git.mk
