NULL =

icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA =				\
	goa-account-facebook.svg	\
	goa-account-flickr.svg		\
	goa-account-google.svg		\
	goa-account-msn.svg		\
	goa-account-owncloud.svg	\
	goa-account-pocket.svg		\
	goa-account-foursquare.svg	\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~

-include $(top_srcdir)/git.mk
