NULL =

icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA =				\
	goa-account.svg			\
	goa-account-exchange.svg	\
	goa-account-facebook.svg	\
	goa-account-fedora.svg		\
	goa-account-flickr.svg		\
	goa-account-google.svg		\
	goa-account-lastfm.svg		\
	goa-account-msn.svg		\
	goa-account-owncloud.svg	\
	goa-account-foursquare.svg	\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~

-include $(top_srcdir)/git.mk
