NULL =

icondir = $(datadir)/icons/hicolor/symbolic/apps
icon_DATA =					\
	goa-account-symbolic.svg		\
	goa-account-exchange-symbolic.svg	\
	goa-account-facebook-symbolic.svg	\
	goa-account-flickr-symbolic.svg		\
	goa-account-google-symbolic.svg		\
	goa-account-lastfm-symbolic.svg		\
	goa-account-msn-symbolic.svg		\
	goa-account-owncloud-symbolic.svg	\
	goa-account-foursquare-symbolic.svg	\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~

-include $(top_srcdir)/git.mk
